--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "demo": "react-native run-ios --simulator='iPhone 8'"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
+    "moment": "^2.24.0",
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-device-info": "^2.3.2",
+    "react-native-sound": "^0.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/runtime": "^7.7.4",
+    "@babel/core": "^7.6.0",
+    "@babel/runtime": "^7.6.0",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.7.0",
+    "eslint": "^6.3.0",
     "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.57.0",
+    "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
