--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,12 @@ target 'YouSnake' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+
   target 'YouSnakeTests' do
     inherit! :search_paths
     # Pods for testing
