added small version so of images to help make android gameplay less clunky

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,9 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+MYAPP_UPLOAD_STORE_FILE=youSnake-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=youSnake-key
+# Definitely NOT passwords stored in plain text.....*looks around suspiciously to see if anyone caught the lie*
+# MYAPP_UPLOAD_STORE_PASSWORD=ilovethefroggy
+MYAPP_UPLOAD_STORE_PASSWORD=Mmmmmmm8!
+MYAPP_UPLOAD_KEY_PASSWORD=Mmmmmmm8!
