--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "moment": "^2.24.0",
+    "node-pre-gyp": "^0.14.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-device-info": "^2.3.2",
